src/client/css/app.css
@keyframes loaderSpin {
  from { transform: rotate(0deg); }
  to { transform: rotate(360deg); }
}
@keyframes copiedMsg {
  0% { opacity: 0; }
  10%,
  40% { opacity: 1; }
  100% { opacity: 0; }
}

:root {
  --copiedMsgDuration: 2000ms;
}

*, *::before, *::after {
  box-sizing: border-box;
}

html, body {
  font: 16px Helvetica, Arial, sans-serif;
  padding: 0;
  margin: 0;
}

form {
  padding: 1em;
  margin: 0;
}
form > *:not(:last-child) {
  margin-bottom: 1em;
}
form button,
form input {
  font-size: 1em;
}
form button {
  color: #fff;
  width: 100%;
  padding: 0.75em 1em;
  border: none;
  border-radius: 0;
  background: #000;
  cursor: pointer;
}

.spinner {
  content: '';
  width: 2em;
  height: 2em;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}
.spinner::before {
  content: '';
  width: 100%;
  height: 100%;
  border: solid 5px rgba(0, 0, 0, 0.15);
  border-bottom-color: #000;
  border-radius: 100%;
  background: transparent;
  display: block;
  animation: loaderSpin 350ms infinite linear;
}

.hr-with-text {
  font-weight: bold;
  text-align: center;
  position: relative;
  z-index: 0;
}
.hr-with-text::before {
  content: '';
  width: 100%;
  height: 1px;
  background: currentColor;
  position: absolute;
  top: 50%;
  left: 0;
  z-index: -1;
}
.hr-with-text > * {
  padding: 0 1em;
  background: #eeeeee;
}

.help-text {
  color: rgba(0 ,0, 0, 0.5);
  font-size: 0.75em;
  margin: 0.5em 0;
}

.labeled-input input {
  width: var(--labeled-input__input-width, auto);
  padding: 0.5em;
  margin-left: 0.5em;
}
.labeled-input input:required {
  padding: 0.5em 1.75em 0.5em 0.5em;
}
.labeled-input input:required ~ label::after {
  content: '\2217';
  color: #ff7600;
  font-size: 1.75em;
  font-weight: bold;
  position: absolute;
  top: 50%;
  right: 0.25em;
  transform: translateY(-50%);
}
.labeled-input__wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
  flex-direction: row-reverse;
  position: relative;
}

#createConfig {
  max-width: 360px;
}

.remember-me {
  text-align: right;
  user-select: none;
  cursor: pointer;
  display: block;
}

#createAccount nav {
  display: flex;
}
#createAccount nav button:not(:first-of-type) {
  margin-left: 0.75em;
}

custom-dialog button {
  color: #fff;
  width: 100%;
  padding: 0.75em 1em;
  border: none;
  border-radius: 0.25em;
  background: #000;
  cursor: pointer;
}

.doors {
  width: 100%;
  height: 100%;
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  user-select: none;
  pointer-events: none;
  z-index: 10;
}
.doors::before,
.doors::after {
  content: '';
  width: 50%;
  height: 100%;
  display: inline-block;
  transition: transform 500ms;
}
.doors::before {
  background: linear-gradient(90deg, #c0c0c0 90%, #949494 94%, #c0c0c0 95%, #c0c0c0 99%, #adadad 100%);
}
.doors::after {
  background: linear-gradient(270deg, #c0c0c0 90%, #949494 94%, #c0c0c0 95%, #c0c0c0 99%, #adadad 100%);
}
.doors.open::before {
  transform: translateX(-100%);
}
.doors.open::after {
  transform: translateX(100%);
}

.credentials {
  height: 100%;
  display: flex;
  flex-direction: column;
}

.credentials__top-nav {
  background: #ccc;
  box-shadow: 0 -2rem 2rem 2rem rgba(0, 0, 0, 0.75);
  display: flex;
  justify-content: center;
  position: relative;
  z-index: 1;
}

.no-creds-msg {
  padding: 1em;
  border: solid 1px #aaa;
  border-radius: 0.5em;
  box-shadow: 0 9px 15px 0px rgba(0, 0, 0, 0.25);
  background: #fff;
  display: none;
  position: absolute;
  top: 25%;
  left: 50%;
  transform: translateX(-50%);
}

.credentials__body {
  height: 100%;
  overflow: hidden;
  background: #eee;
  position: relative;
}
.credentials__body .spinner {
  display: none;
}
.credentials__body.is--loading .spinner {
  display: block;
  top: 40%;
}
.credentials__body.has--no-credentials .no-creds-msg {
  display: block;
}

.credentials__list {
  height: 100%;
  padding: 2em 0;
  overflow-y: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.credentials-card {
  width: 450px;
  padding: 0.5em 1em 1em;
  border: solid 1px;
  border-radius: 0.25em;
  background: #fff;
  box-shadow: 0 4px 12px 2px rgba(0,0,0,0.25);
}
.credentials-card:not(:first-child) {
  margin-top: 1em;
}
.credentials-card__label {
  font-weight: bold;
  text-transform: capitalize;
  line-height: 2em;
  border-bottom: solid 1px;
  margin-bottom: 1em;
}
.credentials-card__list {
  width: 100%;
  display: table;
}
.credentials-card__list-item {
  display: table-row;
}
.credentials-card__list-item:not(:first-child) {
  margin-top: 0.5em;
}
.credentials-card__list-item label,
.credentials-card__list-item label + div {
  display: table-cell;
}
.credentials-card__list-item label {
  text-transform: capitalize;
  padding: 0.5em 1.5em 0.5em 0;
}
.credentials-card__list-item label + div {
  width: 100%;
}
.credentials-card__list-item-value {
  width: 100%;
  font-family: monospace;
  padding: 0.5em;
  display: flex;
  cursor: pointer;
  position: relative;
}
.credentials-card__list-item-value * {
  user-select: none;
  pointer-events: none;
}
.credentials-card__list-item-value span {
  width: 100%;
}
.credentials-card__list-item-value.copied::after {
  content: 'Copied';
  width: 100%;
  height: 100%;
  padding: 0.5em;
  background: #b1ffb1;
  position: absolute;
  top: 0;
  left: 0;
  animation: copiedMsg var(--copiedMsgDuration);
  animation-fill-mode: forwards;
}

.add-creds-form {
  --labeled-input__input-width: 270px;
  padding: 1em;
}
.add-creds-form__inputs {
  max-height: calc(100vh - 260px);
  overflow-x: hidden;
  overflow-y: auto;
}
.add-creds-form__inputs > *:not(:last-child) {
  margin-bottom: 0.25em;
}
#addCustomCred {
  width: 100%;
  color: #000;
  border: solid 1px;
  background: #eee;
}

form.input-creator-form > * {
  margin: 0;
}
.input-creator {
  padding: 0.5em;
  border: dotted 1px;
  background: rgba(187, 249, 200, 0.6);
}
.input-creator nav {
  margin-top: 0.5em;
  display: flex;
}
.input-creator button {
  color: #333;
  border: solid 1px;
  background-color: transparent;
  transition: background-color 200ms;
}
.input-creator button:hover {
  background-color: rgba(255, 255, 255, 0.75);
}
.input-creator button:first-child {
  border-right: none;
  border-radius: 0.25em 0 0 0.25em;
}
.input-creator button:last-child {
  border-radius: 0 0.25em 0.25em 0;
}
.input-creator input {
  width: 100%;
  padding: 0.5em;
  border: solid 1px #8c8c8c;
  border-radius: 0.25em;
  background: #fff;
}
#addCustomCred.is--hidden,
.input-creator.is--hidden {
  display: none;
}

